# synfx-dsp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: approx.rs  atomic.rs  biquad.rs  dattorro.rs  delay.rs  env.rs  filters.rs  helpers.rs  interpolation.rs  lib.rs  low_freq.rs  oscillators.rs  oversampling.rs  rand.rs  test.rs  trig_clock.rs  waveshapers.rs
src/fh_va/: ladder.rs  ladder_plot.rs  mod.rs  sallen_key.rs  solver.rs  svf.rs
tests/: common.rs  delay_buffer.rs
