[package]
name = "synfx-dsp"
version = "0.5.3"
edition = "2021"
authors = ["Weird Constructor <weirdconstructor@gmail.com>"]
license = "GPL-3.0-or-later"
description = "DSP real time audio synthesis, effect algorithms and utilities for Rust"
keywords = ["audio", "real-time", "synthesis", "dsp", "music"]
categories = ["multimedia::audio", "multimedia", "algorithms", "mathematics"]
repository = "https://github.com/WeirdConstructor/synfx-dsp"
readme = "README.md"

[dependencies]
num-traits = "0.2.14"
